# cbpro-automated-trading

./: README.md
cbpro-automated-trading-framework/: Cargo.toml  README.md
cbpro-automated-trading-framework/examples/simple-bot/: Cargo.toml
cbpro-automated-trading-framework/examples/simple-bot/src/: main.rs
cbpro-automated-trading-framework/src/: lib.rs
coinbase-pro-api-rust/: .gitignore  Cargo.toml  README.md  strategy.md
coinbase-pro-api-rust/src/: accounts.rs  client.rs  conversion.rs  errors.rs  level2_feed.rs  lib.rs  orders.rs
