[package]
name = "cbpro-automated-trading-framework"
version = "0.1.0"
authors = ["Ben McCormick", "Richard Jo", "Ethan Zack"]
edition = "2018"

[dependencies]
coinbase-pro-api-rust = { path = "../coinbase-pro-api-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rust_decimal = "1.14"
rust_decimal_macros = "1.14"