[package]
name = "coinbase-pro-api-rust"
version = "0.1.0"
authors = ["Ben McCormick", "Richard Jo", "Ethan Zack"]
edition = "2018"

[dependencies]
rust-crypto = "^0.2"
reqwest = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
data-encoding = "2.3.2"
error-chain = "0.12.4"
tokio = { version = "1", features = ["full"] }
uuid = "0.8.2"
tungstenite = "0.13.0"
url = "2.2.2"
warp = "0.3.1"
websocket = "0.26.2"
native-tls = "0.2.7"
env_logger = "0.8.3"
rust_decimal = "1.14"